# LLMSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  config.yaml  config_exp1_fp16_gpu.yaml  config_exp2_fp16_pim.yaml  config_exp3_2bit_gpu.yaml  config_exp4_2bit_hybrid.yaml  config_exp5_2bit_allpim.yaml  config_exp6_2bit_dequant_pim.yaml  config_prefill.yaml
docs/: LLM-PIM-sim-1.py  PIM_ARCHITECTURE.md  PIM_COMMAND_TIMING.md  PIM_REQUEST_LIFECYCLE.md  TYPE_RELATIONSHIP.md  experiment_comparison.md  experiment_report.md  idea.md  nearbank_pim_changes.md  pim_rb_pe_analysis.md
docs/papers/: KIVI.md
docs/papers/KIVI/paper/: appendix.tex  experiment.tex  icml2024.sty  intro.tex  main.aux  main.bbl  main.blg  main.out  main.tex  math_commands.tex  method.tex  prelim.tex  ref.bib  related_work.tex
docs/papers/KIVI/paper/tables/: longbench.tex  merged-lm-eval.tex
docs/papers/deplex/: DUPLEX_ARCHITECTURE.md
docs/papers/deplex/paper/: 0_cover_page.tex  10_conclusion.tex  1_introduction.tex  2_background.tex  3_motivation.tex  4_contribution-1.tex  5_contribution-2.tex  6_experimental_setup.tex  7_evaluation.tex  8_discussion.tex  9_related_work.tex  IEEEtran.cls  IEEEtranS.bst  main.bbl  main.tex  refs.bib
docs/papers/iccd26/: TODO.md  background.tex  experiment.tex  intro.tex  main.aux  main.bbl  main.blg  main.out  main.tex  method.tex  ref.bib  related.tex
docs/papers/pim_attention/: appendix.tex  experiment.tex  intro.tex  main.aux  main.bbl  main.blg  main.out  main.tex  method.tex  prelim.tex  ref.bib  related_work.tex
eval/: CMakeLists.txt  test.cpp  test_nearbank.cpp
log/: cmd_hbm3E.log.ch0  config_exp1_fp16_gpu.json  config_exp1_fp16_gpu.txt  config_exp2_fp16_pim.json  config_exp2_fp16_pim.txt  config_exp3_2bit_gpu.json  config_exp3_2bit_gpu.txt  config_exp4_2bit_hybrid.json  config_exp4_2bit_hybrid.txt  config_exp5_2bit_allpim.json  config_exp5_2bit_allpim.txt  config_exp6_2bit_dequant_pim.json  config_exp6_2bit_dequant_pim.txt  config_prefill.json  config_prefill.txt
src/dram/: CMakeLists.txt
src/dram/nearbank/: CMakeLists.txt  nearbank_config.h  nearbank_pim.cpp  nearbank_pim.h
src/hardware/: attention_gen_impl.cpp  attention_mixed_impl.cpp  hardware_config.h
src/model/: model_config.h
src/module/: module_graph.cpp  status.h  timeboard.cpp  timeboard.h
tools/: parse_layer.py  report.py  run_all.sh  view_result.py
